--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.plexsdk</groupId>
+    <groupId>47.one0</groupId>
     <artifactId>examples</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -24,7 +24,7 @@
             <version>2.14.0-rc1</version>
         </dependency>
         <dependency>
-            <groupId>com.plexsdk</groupId>
+            <groupId>47.one0</groupId>
             <artifactId>PlexSDK</artifactId>
             <version>0.0.1</version>
         </dependency>
