--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>
-        com.plexsdk
+        47.one0
     </groupId>
     <artifactId>
         plex-sdk
