--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -1,13 +1,13 @@
 workflowVersion: 1.0.0
 speakeasyVersion: latest
 sources:
-    my-source:
+    plexapi:
         inputs:
-            - location: registry.speakeasyapi.dev/lukehagar/lukehagar/plex-api:main
+            - location: registry.speakeasyapi.dev/plexapi/plexapi/plexapi:main
 targets:
     plexjava:
         target: java
-        source: my-source
+        source: plexapi
         publish:
             java:
                 ossrhUsername: J4dlHj0l
@@ -17,4 +17,4 @@ targets:
         codeSamples:
             output: codeSamples.yaml
             registry:
-                location: registry.speakeasyapi.dev/lukehagar/lukehagar/code-samples-java-plexjava
+                location: registry.speakeasyapi.dev/plexapi/plexapi/code-samples-java-plexjava
