--- a/.speakeasy/workflow.yaml
+++ b/.speakeasy/workflow.yaml
@@ -15,6 +15,8 @@ targets:
                 gpgSecretKey: $java_gpg_secret_key
                 gpgPassPhrase: $java_gpg_passphrase
         codeSamples:
+            labelOverride: 
+                fixedValue: PlexJava
             output: codeSamples.yaml
             registry:
                 location: registry.speakeasyapi.dev/plexapi/plexapi/code-samples-java-plexjava
